--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,6 +1,6 @@
 <header>
     <h1>Bob's Burgers</h1>
-    <img src="../public/assets/img/macfriends80.jpg" alt="MacD">
+    <img src="/assets/img/macfriends80.jpg" alt="MacD">
 </header>
 
 
@@ -37,6 +37,8 @@
 
 </div>
 
+<div id="add-a-burger">
+
 <h2>Add a Burger</h2>
 <form class="create-form">
     <div class="form-group">
@@ -45,6 +47,8 @@
 
     <button type="submit">Add Burger</button>
 </form>
+
+</div>
 
 <script>
 
