--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<title>Bob's Burger</title>
-		<link rel="stylesheet" href="../../public/assets/css/burger_style.css">
+		<link rel="stylesheet" href="/assets/css/burger_style.css">
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	</head>
 	<body>
